I created mainBox1, and put classes for random number and win or lose, and I styled them.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <div id='titleArea'>
         <div id='titlePlate'>CrystalsCollector!</div>
     </div>
+
+    <div id='instruction'></div>
+
+    <div id='mainBox1'>
+        <div class="ranNum"></div>
+        <div class="winLose"></div>
+    </div>
 </body>
 
 
