I changed names for classes in the mainbox1, and made them larger.

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id='instruction'></div>
 
     <div id='mainBox1'>
-        <div class="ranNum"></div>
-        <div class="winLose"></div>
+        <div class="ranNumBox"></div>
+        <div class="winLossBox"></div>
     </div>
 </body>
 
