I created button area, and styled it.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <div class="ranNumBox"></div>
         <div class="winLossBox"></div>
     </div>
+
+    <div id='gameButton'>
+        <div type="button" class="box"></div>
+        <div type="button" class="box"></div>
+        <div type="button" class="box"></div>
+        <div type="button" class="box"></div>
+    </div>
+
+
+
 </body>
 
 
