I created two classes for score and score display, and styled them.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
         <div type="button" class="box"></div>
     </div>
 
+    <div id='scoreBoard'>
+        <div class="score"></div>
+        <div class="scoreDisplay"></div>
+    </div>
+
 
 
 </body>
