I added span ids for ranNumBox and WinLossBox.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
     </div>
 
     <div id='mainBox1'>
-        <div class="ranNumBox"></div>
-        <div class="winLossBox"></div>
+        <div class="ranNumBox">
+            <span id="randomNumber"></span>
+        </div>
+
+        <div class="winLossBox">
+            <p>Wins: <span id="wins">0</span> </p>
+            <p>Losses: <span id="losses">0</span></p>
+        </div>
     </div>
 
     <div id='gameButton'>
