--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
     </div>
 
     <div id='gameButton'>
-        <div type="button" class="box"></div>
+        <div type="button" class="box">
+            <input type="image" src="assets/images/red.png"></input>
+        </div>
         <div type="button" class="box"></div>
         <div type="button" class="box"></div>
         <div type="button" class="box"></div>
