I added the rest of the images for three other buttons, and changed the background color from blue to white..

--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
         <div type="button" class="box">
             <input type="image" src="assets/images/red.png"></input>
         </div>
-        <div type="button" class="box"></div>
-        <div type="button" class="box"></div>
-        <div type="button" class="box"></div>
+        <div type="button" class="box">
+            <input type="image" src="assets/images/blue.png"></input>
+        </div>
+        <div type="button" class="box">
+            <input type="image" src="assets/images/yellow.png"></input>
+        </div>
+        <div type="button" class="box">
+            <input type="image" src="assets/images/green.png"></input>
+        </div>
     </div>
 
     <div id='scoreBoard'>
