I added paragraphs and span id for scoreBoard.

--- a/index.html
+++ b/index.html
@@ -56,8 +56,13 @@
     </div>
 
     <div id='scoreBoard'>
-        <div class="score"></div>
-        <div class="scoreDisplay"></div>
+        <div class="score">
+            <p>Your total score is: </p>
+        </div>
+        <div class="scoreDisplay">
+            <p class="scoreDisplayMain"></p>
+            <span id="totalScore"></span>
+        </div>
     </div>
 
 
