--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Josefin+Slab&display=swap" rel="stylesheet">
 </head>
 
 
@@ -59,6 +60,7 @@
         <div class="score">
             <p>Your total score is: </p>
         </div>
+
         <div class="scoreDisplay">
             <p class="scoreDisplayMain"></p>
             <span id="totalScore"></span>
