--- a/index.html
+++ b/index.html
@@ -3,73 +3,75 @@
 <html>
 
 
-<head>
-    <title>Crystal Collector</title>
+    <head>
+        <title>Crystal Collector</title>
 
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=B612+Mono|Josefin+Slab&display=swap" rel="stylesheet">
-</head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=B612+Mono|Josefin+Slab&display=swap" rel="stylesheet">
+    </head>
 
 
-<body>
-    <div id='titleArea'>
-        <div id='titlePlate'>CrystalsCollector!</div>
-    </div>
-
-    <div id='instruction'>
-        <p>You will be given a random number at the start of the game.</p>
-        <br>
-        <p>There are four crystals below. By clicking on a crystal, you will add a specific amount of points to your total score.</p>
-        <br>
-        <p>You win the game by matching your total score to the random number. You lose the game if your total score goes above the random number.</p>
-        <br>
-        <p>The value of each crystal is hidden from you until you click on it.</p>
-        <br>
-        <p>Each time when the game starts, the game will change the values of each crystal.</p>
-    </div>
-
-    <div id='mainBox1'>
-        <div class="ranNumBox">
-            <span id="randomNumber"></span>
+    <body>
+        <div id='titleArea'>
+            <div id='titlePlate'>CrystalsCollector!</div>
         </div>
 
-        <div class="winLossBox">
-            <p>Wins: <span id="wins">0</span> </p>
-            <p>Losses: <span id="losses">0</span></p>
-        </div>
-    </div>
-
-    <div id='gameButton'>
-        <div type="button" class="box">
-            <input type="image" src="assets/images/red.png"></input>
-        </div>
-        <div type="button" class="box">
-            <input type="image" src="assets/images/blue.png"></input>
-        </div>
-        <div type="button" class="box">
-            <input type="image" src="assets/images/yellow.png"></input>
-        </div>
-        <div type="button" class="box">
-            <input type="image" src="assets/images/green.png"></input>
-        </div>
-    </div>
-
-    <div id='scoreBoard'>
-        <div class="score">
-            <p>Your total score is: </p>
+        <div id='instruction'>
+            <p>You will be given a random number at the start of the game.</p>
+            <br>
+            <p>There are four crystals below. By clicking on a crystal, you will add a specific amount of points to your total score.</p>
+            <br>
+            <p>You win the game by matching your total score to the random number. You lose the game if your total score goes above the random number.</p>
+            <br>
+            <p>The value of each crystal is hidden from you until you click on it.</p>
+            <br>
+            <p>Each time when the game starts, the game will change the values of each crystal.</p>
         </div>
 
-        <div class="scoreDisplay">
-            <p class="scoreDisplayMain"></p>
-            <span id="totalScore"></span>
+        <div id='mainBox1'>
+            <div class="ranNumBox">
+                <span id="randomNumber"></span>
+            </div>
+
+            <div class="winLossBox">
+                <p>Wins: <span id="wins">0</span> </p>
+                <p>Losses: <span id="losses">0</span></p>
+            </div>
         </div>
-    </div>
+
+        <div id='gameButton'>
+            <div type="button" class="box">
+                <input type="image" src="assets/images/red.png"></input>
+            </div>
+            <div type="button" class="box">
+                <input type="image" src="assets/images/blue.png"></input>
+            </div>
+            <div type="button" class="box">
+                <input type="image" src="assets/images/yellow.png"></input>
+            </div>
+            <div type="button" class="box">
+                <input type="image" src="assets/images/green.png"></input>
+            </div>
+        </div>
+
+        <div id='scoreBoard'>
+            <div class="score">
+                <p>Your total score is: </p>
+            </div>
+
+            <div class="scoreDisplay">
+                <p class="scoreDisplayMain"></p>
+                <span id="totalScore"></span>
+            </div>
+        </div>
+
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 
-
-</body>
+    </body>
 
 
 </html>
