I added a funtion to assign a random number on red crystal.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/style.css">
         <link href="https://fonts.googleapis.com/css?family=B612+Mono|Josefin+Slab&display=swap" rel="stylesheet">
 
-        
+
     </head>
 
 
@@ -44,7 +44,7 @@
 
         <div id='gameButton'>
             <div type="button" class="box">
-                <input type="image" src="assets/images/red.png"></input>
+                <input type="image" src="assets/images/red.png" id="red" value="crystal1"></input>
             </div>
             <div type="button" class="box">
                 <input type="image" src="assets/images/blue.png"></input>
