--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div id='gameButton'>
             <div type="button" class="box">
-                <input type="image" src="assets/images/red.png" id="red" value="crystal1"></input>
+                <input type="image" src="assets/images/red.png" class="crystalButton" id="red" value="crystal1"></input>
             </div>
             <div type="button" class="box">
                 <input type="image" src="assets/images/blue.png"></input>
