I add class and id for the rest of three other crystals, and points from all four crystals are adding successfully.

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 <input type="image" src="assets/images/red.png" class="crystalButton" id="red" value="crystal1"></input>
             </div>
             <div type="button" class="box">
-                <input type="image" src="assets/images/blue.png"></input>
+                <input type="image" src="assets/images/blue.png" class="crystalButton" id="blue" value="crystal2"></input>
             </div>
             <div type="button" class="box">
-                <input type="image" src="assets/images/yellow.png"></input>
+                <input type="image" src="assets/images/yellow.png" class="crystalButton" id="yellow" value="crystal3"></input>
             </div>
             <div type="button" class="box">
-                <input type="image" src="assets/images/green.png"></input>
+                <input type="image" src="assets/images/green.png" class="crystalButton" id="green" value="crystal4"></input>
             </div>
         </div>
 
